--- a/style.css
+++ b/style.css
@@ -1,19 +1,36 @@
 
+body{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
 .heading{
     background-color: aquamarine;
     text-align: center;
+    margin-bottom: 5px;
 
 }
 
 .btn{
-    color:green;
+    background-color: green;
+    color:yellow;
     border-radius: 4%;
-    height:12px;
-    width:14px;
+    height:50px;
+    width:120px;
+    box-shadow: inset;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    cursor: pointer;
     
 }
 
 .btn:hover{
-    color:blue;
+    background-color: blue;
+    color:white;
 
 }
